OPENIDM-6099 - Fix smaller screen text overflow issue with wide card

--- a/openidm-ui/openidm-ui-common/src/main/resources/css/card.less
+++ b/openidm-ui/openidm-ui-common/src/main/resources/css/card.less
@@ -304,3 +304,9 @@
     width: 100%;
   }
 }
+
+@media (max-width: 767px) {
+  .wide-card {
+    overflow: auto;
+  }
+}
